--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -27,4 +27,4 @@ jobs:
         email: ${{ secrets.HEROKU_EMAIL }}
         api_key: ${{ secrets.HEROKU_API_KEY }}
         app_name: ${{ secrets.HEROKU_APP_NAME }}
-        dockerfile: 'FuzzoBot/Dockerfile' # set the path to the folder where the Dockerfile is located
+        dockerfile: 'FuzzoBot' # set the path to the folder where the Dockerfile is located
