--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -22,10 +22,10 @@ jobs:
 
     - name: Build, Push and Deploy to Heroku
       id: heroku
-      uses: jctaveras/heroku-deploy@v1.0.0
+      uses: jctaveras/heroku-deploy
       with:
         email: ${{ secrets.HEROKU_EMAIL }}
         api_key: ${{ secrets.HEROKU_API_KEY }}
         app_name: ${{ secrets.HEROKU_APP_NAME }}
-        dockerfile: 'FuzzoBot'
+        dockerfile_path: 'FuzzoBot'
         formation: 'worker'
