--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Build, Push and Deploy to Heroku
       id: heroku
-      uses: jctaveras/heroku-deploy
+      uses: jctaveras/heroku-deploy@v2
       with:
         email: ${{ secrets.HEROKU_EMAIL }}
         api_key: ${{ secrets.HEROKU_API_KEY }}
