--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -20,14 +20,12 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
 
-    - name: Build, Push and Deploy to Heroku
-      id: heroku
-      uses: jctaveras/heroku-deploy@v2.1.3
+    - name: Deploy to Heroku
+      uses: AkhileshNS/heroku-deploy@v3.12.12
       with:
-        email: ${{ secrets.HEROKU_EMAIL }}
-        api_key: ${{ secrets.HEROKU_API_KEY }}
-        app_name: ${{ secrets.HEROKU_APP_NAME }}
-        dockerfile_path: 'FuzzoBot'
-        formation: 'worker'
-        
-        
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_email: ${{ secrets.HEROKU_EMAIL }}
+        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+        usedocker: true
+        docker_heroku_process_type: worker
+        appdir: FuzzoBot
