--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build -c Release --no-restore
 
     - name: Deploy to Heroku
       uses: AkhileshNS/heroku-deploy@v3.12.12
