red4 database commands

--- a/FuzzoBot/FuzzoBot.csproj
+++ b/FuzzoBot/FuzzoBot.csproj
@@ -19,4 +19,8 @@
         <EmbeddedResource Include="Resources\ModTools.json" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\RedDatabase\RedDatabase.csproj" />
+    </ItemGroup>
+
 </Project>
