--- a/FuzzoBot/FuzzoBot.csproj
+++ b/FuzzoBot/FuzzoBot.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="Discord.Net.Labs" Version="3.6.1" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.39" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     </ItemGroup>
 
