--- a/FuzzoBot/FuzzoBot.csproj
+++ b/FuzzoBot/FuzzoBot.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Discord.Net.Labs" Version="3.6.1" />
         <PackageReference Include="HtmlAgilityPack" Version="1.11.39" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+        <PackageReference Include="dotenv.net" Version="3.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
