--- a/FuzzoBot/FuzzoBot.csproj
+++ b/FuzzoBot/FuzzoBot.csproj
@@ -10,19 +10,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Discord.Net.Labs" Version="3.6.1" />
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.39" />
+        <PackageReference Include="Discord.Net" Version="3.8.1" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-        <PackageReference Include="dotenv.net" Version="3.0.0"/>
+        <PackageReference Include="dotenv.net" Version="3.1.1" />
     </ItemGroup>
 
     <ItemGroup>
         <None Remove="Resources\ModTools.json" />
         <EmbeddedResource Include="Resources\ModTools.json" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\RedDatabase\RedDatabase.csproj" />
     </ItemGroup>
 
 </Project>
