--- a/FuzzoBot/FuzzoBot.csproj
+++ b/FuzzoBot/FuzzoBot.csproj
@@ -14,4 +14,10 @@
         <PackageReference Include="dotenv.net" Version="3.1.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update=".env">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
