--- a/FuzzoBot/FuzzoBot.csproj
+++ b/FuzzoBot/FuzzoBot.csproj
@@ -8,16 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Discord.Net" Version="3.9.0" />
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-        <PackageReference Include="dotenv.net" Version="3.1.2" />
+        <PackageReference Include="Discord.Net" Version="3.9.0"/>
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.46"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0"/>
+        <PackageReference Include="dotenv.net" Version="3.1.2"/>
     </ItemGroup>
 
     <ItemGroup>
-      <None Update=".env">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
+        <None Update=".env">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Services"/>
     </ItemGroup>
 
 </Project>
