--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,7 +17,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 7.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build -c Release --no-restore
+    
+    - name: Publish with dotnet
+      run: dotnet publish -o ./publish -c Release --self-contained -r linux-x64
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: ubuntu
+        path: ./publish
