--- a/FuzzoBot/FuzzoBot.csproj
+++ b/FuzzoBot/FuzzoBot.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="dotenv.net" Version="3.1.2" />
+        <PackageReference Include="Octokit" Version="4.0.3" />
     </ItemGroup>
 
     <ItemGroup>
