--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: 7.0.x
     
     - name: Publish with dotnet
-      run: dotnet publish -o ./publish -c Release --self-contained -r linux-x64
+      run: dotnet publish -o ./publish -c Release --self-contained -r linux-x64 -p:PublishSingleFile=true
 
     - uses: actions/upload-artifact@v2
       with:
